tests/test-runner.css
.tests-result-container {
    font-family: monospace, monospace;
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
}

.tests-result-container table {
    font-size: small;
    border-collapse: collapse;
    word-break: break-word;
    table-layout: fixed;
    width: 100%;
}

.tests-result-container table tr {
    padding: 0.25rem;
    border-top: 1px solid var(--badge-grey--light);
    display: flex;
    gap: 0.5rem;
    align-items: baseline;
}

.tests-result-container table tr:last-child {
    border-bottom: 1px solid var(--badge-grey--light);
}

.tests-result-container table tr:hover .status-badge.status-badge--success {
    border-color: var(--badge-green--dark);
}

.tests-result-container table tr:hover .status-badge.status-badge--info {
    border-color: var(--badge-blue--dark);
}

.tests-result-container table tr:hover .status-badge.status-badge--fail {
    border-color: var(--badge-red--dark);
}

.tests-statistics-container {
    display: flex;
    flex-direction: column;
    color: var(--badge-yellow--dark);
    background-color: var(--badge-yellow--light);
    flex-shrink: 0;
    font-size: x-large;
    padding: 22px 12px;
    gap: 26px;
}

.tests-statistics-container .number-and-badge-wrapper {
    display: flex;
    flex-direction: column;
    gap: 5px;
    text-align: center;
}

.tests-result-container table tbody {
    display: flex;
    flex-direction: column;
}

.row-style-test-passed {
    color: var(--badge-green--dark);
}

.row-style-test-passed:hover {
    background-color: var(--badge-green--light);
    border-color: var(--badge-green--light);
}

.row-style-test-failed {
    color: var(--badge-red--dark);
}

.row-style-test-failed:hover {
    background-color: var(--badge-red--light);
    border-color: var(--badge-red--light);
}

.row-style-test-expected-error {
    color: var(--badge-blue--dark);
}

.row-style-test-expected-error:hover {
    background-color: var(--badge-blue--light);
    border-color: var(--badge-blue--light);
}

/* Custom style for Accordion widget */
.accordion-widget-container .header-wrapper .icon {
    margin-right: 0.25rem;
}

@media only screen and (max-width: 1200px) {
    .tests-result-container {
        flex-direction: column-reverse;
        gap: 0;
    }
}

@media only screen and (max-width: 1200px) {
    .tests-result-container table tr {
        flex-wrap: wrap;
    }

    .tests-result-container table tr:first-child {
        border: none;
    }
}

@media only screen and (max-width: 1200px) {
    .tests-statistics-container {
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap;
        font-size: large;
        padding: 0.5rem;
        gap: 0.5rem;
        top: 0;
        align-self: stretch;
        position: sticky;
        top: 8px;
        margin-bottom: 5px;
    }

    .tests-statistics-container::before {
        content: '';
        width: 100%;
        height: 8px;
        background-color: var(--color-white);
        position: absolute;
        top: -8px;
    }
}

@media only screen and (max-width: 1200px) {
    .tests-statistics-container .number-and-badge-wrapper {
        display: flex;
        flex-direction: row;
        gap: 0.5rem;
        text-align: center;
        align-items: center;
    }
}

@media only screen and (max-width: 600px) {
    .tests-statistics-container {
        position: static;
    }
}

@media only screen and (max-width: 600px) {
    .accordion-widget-container .header-wrapper .icon {
        margin-left: 0.5rem;
        margin-right: 0.25rem;
        font-size: large;
    }
}